clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00113.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00113.c" (c, x86_64-unknown-linux-gnu)
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i, "a", align 4
        %2 = alloca float, "f", align 4
        %3 = const 0 : s32i
        store %3, %0
        %4 = const 0 : s32i
        store %4, %1, align 4
        %5 = load %1 : s32i, align 4
        %6 = const 1 : s32i
        %7 = add %5, %6 : s32i [nsw]
        %8 = cast(int_to_float) %7 : float
        store %8, %2, align 4
        %9 = load %2 : float, align 4
        %10 = load %1 : s32i, align 4
        %11 = cast(int_to_float) %10 : float
        cmp
        %13 = cast(bool_to_int) %12 : s32i
        store %13, %0
        %14 = load %0 : s32i
        return %14
}
