clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00115.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00115.c" (c, x86_64-unknown-linux-gnu)
global s : s8i[4] = ConstArray { ty: Array { element_type: Named("s8i"), size: 4 }, elts: Str("abc"), trailing_zeros_num: 1 } [external, default, align 1, dso_local]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %31 = const 0 : s64i
                %32 = get_global @s : s8i[4]*
                get_element
                %34 = load %33 : s8i, align 1
                %35 = cast(integral) %34 : s32i
                %36 = const 97 : s32i
                cmp
                if %37 {
                        %38 = const 1 : s32i
                        store %38, %0
                        %39 = load %0 : s32i
                        return %39
                }
                yield
        }
        scope {
                %22 = const 1 : s64i
                %23 = get_global @s : s8i[4]*
                get_element
                %25 = load %24 : s8i, align 1
                %26 = cast(integral) %25 : s32i
                %27 = const 98 : s32i
                cmp
                if %28 {
                        %29 = const 2 : s32i
                        store %29, %0
                        %30 = load %0 : s32i
                        return %30
                }
                yield
        }
        scope {
                %13 = const 2 : s64i
                %14 = get_global @s : s8i[4]*
                get_element
                %16 = load %15 : s8i, align 1
                %17 = cast(integral) %16 : s32i
                %18 = const 99 : s32i
                cmp
                if %19 {
                        %20 = const 3 : s32i
                        store %20, %0
                        %21 = load %0 : s32i
                        return %21
                }
                yield
        }
        scope {
                %4 = const 3 : s64i
                %5 = get_global @s : s8i[4]*
                get_element
                %7 = load %6 : s8i, align 1
                %8 = cast(integral) %7 : s32i
                %9 = const 0 : s32i
                cmp
                if %10 {
                        %11 = const 4 : s32i
                        store %11, %0
                        %12 = load %0 : s32i
                        return %12
                }
                yield
        }
        %2 = const 0 : s32i
        store %2, %0
        %3 = load %0 : s32i
        return %3
}
