clang-ir/tests/snapshots/snapshot_fixtures__fixtures_c_testsuite__case_00117.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.c-testsuite/case_00117.c" (c, x86_64-unknown-linux-gnu)
global __const.main.x : s32i[2] = ConstArray { ty: Array { element_type: Named("s32i"), size: 2 }, elts: Array([CirInt { ty: Named("s32i"), value: "1" }]), trailing_zeros_num: 1 } [cir_private, default, dso_local, constant]

fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = alloca s32i[2], "x", align 4
        %2 = const 0 : s32i
        store %2, %0
        %3 = get_global @__const.main.x : s32i[2]*
        copy
        %4 = const 1 : s64i
        get_element
        %6 = load %5 : s32i, align 4
        store %6, %0
        %7 = load %0 : s32i
        return %7
}
